added teleport api

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
     </div>
     <div id="map"></div>
+    <div id="info-box"></div>
     <div id="sidebar-toggle" class="icon-menu"></div>
   </div>
   <script src="app.js"></script>
