chaneg infobox, added categories

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </div>
     </div>
     <div id="map"></div>
-    <div id="info-box"></div>
+    <div id="info-box">
+      <div id="info-box__summary"></div>
+      <div id="info-box__categories"></div>
+    </div>
     <div id="sidebar-toggle" class="icon-menu"></div>
   </div>
   <script src="app.js"></script>
