fixed infobox and sidebar views on mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="info-box__summary"></div>
       <div id="info-box__categories"></div>
     </div>
-    <div id="sidebar-toggle" class="icon-menu"></div>
+    <div id="sidebar-toggle" class="icon-menu" onclick="controller.sidebarToggle()"></div>
   </div>
   <script src="app.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyBiM92HeOAzh2lG2Fyre2KtHbxMp35MMoM&v=3&callback=initMap"
